Implemented Crud for Transaction and UserPayments
